[gd_scene load_steps=13 format=3 uid="uid://byrfhbjlkc8pv"]

[ext_resource type="PackedScene" uid="uid://c40b8axm4uavk" path="res://scenes/background.tscn" id="1_pvjoi"]
[ext_resource type="Script" path="res://scripts/game.gd" id="1_vmu0w"]
[ext_resource type="PackedScene" uid="uid://bcuidoearoisp" path="res://scenes/background_layer_2.tscn" id="2_jaywg"]
[ext_resource type="PackedScene" uid="uid://b0pc2867jvkm8" path="res://scenes/player.tscn" id="3_7n2eo"]
[ext_resource type="PackedScene" uid="uid://dbxrifr8r1hfr" path="res://scenes/deathzone.tscn" id="4_2neok"]
[ext_resource type="PackedScene" uid="uid://bxh1mwh77mruh" path="res://scenes/level_3.tscn" id="4_qvbkd"]
[ext_resource type="PackedScene" uid="uid://qybskgb3pjw6" path="res://scenes/start_game.tscn" id="5_iaf2e"]
[ext_resource type="PackedScene" uid="uid://diojon5wh6to7" path="res://scenes/finish_level_marker.tscn" id="6_7y4p4"]
[ext_resource type="PackedScene" uid="uid://dgtcw1t48yn8c" path="res://scenes/fish_swim.tscn" id="9_0mmvq"]
[ext_resource type="PackedScene" uid="uid://3ragowvf6fi2" path="res://scenes/crow_flight.tscn" id="10_2666r"]
[ext_resource type="PackedScene" uid="uid://x35n586nmokc" path="res://scenes/rooster.tscn" id="11_ty5k0"]
[ext_resource type="PackedScene" uid="uid://btxb5q7m8202o" path="res://scenes/end_level_message.tscn" id="12_yb7wn"]

[node name="game_3" type="Node2D"]
script = ExtResource("1_vmu0w")

[node name="Background" parent="." instance=ExtResource("1_pvjoi")]

[node name="BackgroundLayer2" parent="." instance=ExtResource("2_jaywg")]
script = null

[node name="Player" parent="." instance=ExtResource("3_7n2eo")]
position = Vector2(32, 376)

[node name="Level_3" parent="." instance=ExtResource("4_qvbkd")]

[node name="Deathzone" parent="." instance=ExtResource("4_2neok")]
position = Vector2(76, 224)

[node name="StartGame" parent="." instance=ExtResource("5_iaf2e")]
position = Vector2(32, 427)

[node name="FinishLevelMarker" parent="." instance=ExtResource("6_7y4p4")]
position = Vector2(4773, 259)

[node name="Enemies" type="Node2D" parent="."]
z_index = -100

[node name="FishSwim" parent="Enemies" instance=ExtResource("9_0mmvq")]
position = Vector2(1140, 499)

[node name="FishSwim2" parent="Enemies" instance=ExtResource("9_0mmvq")]
position = Vector2(2352, 36)

[node name="CrowFlight" parent="Enemies" instance=ExtResource("10_2666r")]
position = Vector2(2660, -55)
rotation = -0.0698132

[node name="CrowFlight2" parent="Enemies" instance=ExtResource("10_2666r")]
position = Vector2(4720, -5.00002)
rotation = -0.0698132

[node name="Rooster" parent="Enemies" instance=ExtResource("11_ty5k0")]
position = Vector2(3271, 123)

[node name="Rooster2" parent="Enemies" instance=ExtResource("11_ty5k0")]
position = Vector2(3606, 190)

[node name="Rooster3" parent="Enemies" instance=ExtResource("11_ty5k0")]
position = Vector2(4491, 247)

[node name="EndLevelMessage" parent="." instance=ExtResource("12_yb7wn")]
offset_left = 4772.0
offset_top = 176.0
offset_right = 4772.0
offset_bottom = 176.0
end_level_message = "3"

[connection signal="touch_enemy_on_path" from="Enemies/FishSwim" to="." method="_on_fish_swim_touch_enemy_on_path"]
[connection signal="touch_enemy_on_path" from="Enemies/FishSwim2" to="." method="_on_fish_swim_touch_enemy_on_path"]
[connection signal="touch_enemy_on_path" from="Enemies/CrowFlight" to="." method="_on_crow_flight_touch_enemy_on_path"]
[connection signal="touch_enemy_on_path" from="Enemies/CrowFlight2" to="." method="_on_crow_flight_touch_enemy_on_path"]
[connection signal="player_touch" from="Enemies/Rooster" to="." method="_on_enemy_player_touch"]
[connection signal="player_touch" from="Enemies/Rooster2" to="." method="_on_enemy_player_touch"]
[connection signal="player_touch" from="Enemies/Rooster3" to="." method="_on_enemy_player_touch"]
